--- a/T3kCfgFE/QBentAdjustmentDialog.ui
+++ b/T3kCfgFE/QBentAdjustmentDialog.ui
@@ -37,9 +37,6 @@ QTextEdit:disabled {
   <layout class="QVBoxLayout" name="layoutBody">
    <item>
     <layout class="QVBoxLayout" name="layoutVMidBox" stretch="1,6,1">
-     <property name="spacing">
-      <number>0</number>
-     </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
@@ -58,9 +55,6 @@ QTextEdit:disabled {
      </item>
      <item>
       <layout class="QHBoxLayout" name="layoutHMidBox" stretch="1,2,1">
-       <property name="spacing">
-        <number>0</number>
-       </property>
        <item>
         <spacer name="spacerMid1">
          <property name="orientation">
@@ -83,26 +77,11 @@ QTextEdit:disabled {
           </sizepolicy>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_5" stretch="1,1,1">
-          <property name="spacing">
-           <number>2</number>
-          </property>
-          <property name="leftMargin">
-           <number>2</number>
-          </property>
-          <property name="topMargin">
-           <number>2</number>
-          </property>
-          <property name="rightMargin">
-           <number>2</number>
-          </property>
-          <property name="bottomMargin">
+          <property name="margin">
            <number>2</number>
           </property>
           <item>
            <layout class="QHBoxLayout" name="layoutLocationTop" stretch="1,1,1">
-            <property name="spacing">
-             <number>0</number>
-            </property>
             <item>
              <spacer name="spacerLocTop1">
               <property name="orientation">
@@ -118,9 +97,6 @@ QTextEdit:disabled {
             </item>
             <item>
              <layout class="QVBoxLayout" name="layoutUp">
-              <property name="spacing">
-               <number>3</number>
-              </property>
               <item>
                <widget class="QArrowButton" name="btnUp">
                 <property name="sizePolicy">
@@ -297,14 +273,8 @@ QTextEdit:disabled {
           </item>
           <item>
            <layout class="QHBoxLayout" name="layoutLocationMid" stretch="1,1,1">
-            <property name="spacing">
-             <number>2</number>
-            </property>
             <item>
              <layout class="QHBoxLayout" name="layoutLeft">
-              <property name="spacing">
-               <number>3</number>
-              </property>
               <item>
                <widget class="QArrowButton" name="btnLeft">
                 <property name="sizePolicy">
@@ -418,8 +388,8 @@ QTextEdit:disabled {
                    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Gulim'; font-size:9pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                   </property>
                  </widget>
                 </item>
@@ -505,9 +475,6 @@ Inverted Landscape</string>
             </item>
             <item>
              <layout class="QHBoxLayout" name="layoutRight">
-              <property name="spacing">
-               <number>3</number>
-              </property>
               <item>
                <layout class="QVBoxLayout" name="layoutMarginRight">
                 <item>
@@ -593,8 +560,8 @@ Inverted Landscape</string>
                    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:10pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Gulim'; font-size:10pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                   </property>
                  </widget>
                 </item>
@@ -693,9 +660,6 @@ p, li { white-space: pre-wrap; }
             </item>
             <item>
              <layout class="QVBoxLayout" name="layoutDown">
-              <property name="spacing">
-               <number>3</number>
-              </property>
               <property name="bottomMargin">
                <number>0</number>
               </property>
@@ -921,9 +885,6 @@ p, li { white-space: pre-wrap; }
    </item>
    <item>
     <layout class="QHBoxLayout" name="layoutBtmBox">
-     <property name="spacing">
-      <number>10</number>
-     </property>
      <item>
       <widget class="QPushButton" name="btnReset">
        <property name="sizePolicy">
@@ -1009,15 +970,15 @@ p, li { white-space: pre-wrap; }
  </widget>
  <customwidgets>
   <customwidget>
+   <class>QBorderStyleEdit</class>
+   <extends>QTextEdit</extends>
+   <header>QBorderStyleEdit.h</header>
+  </customwidget>
+  <customwidget>
    <class>QCmdAsyncManagerCtrl</class>
    <extends>QWidget</extends>
    <header>QCmdAsyncManagerCtrl.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>QBorderStyleEdit</class>
-   <extends>QTextEdit</extends>
-   <header>QBorderStyleEdit.h</header>
   </customwidget>
   <customwidget>
    <class>QArrowButton</class>
@@ -1041,7 +1002,6 @@ p, li { white-space: pre-wrap; }
   <tabstop>btnMarginDownDec</tabstop>
   <tabstop>btnMarginLeftInc</tabstop>
   <tabstop>txtEdtMarginLeft</tabstop>
-  <tabstop>btnMarginLeftDec</tabstop>
   <tabstop>btnReset</tabstop>
   <tabstop>btnSave</tabstop>
   <tabstop>btnClose</tabstop>
