--- a/T3kCfgFE/QEditActionKey1Dialog.ui
+++ b/T3kCfgFE/QEditActionKey1Dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>380</width>
-    <height>221</height>
+    <height>262</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -174,6 +174,12 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>90</height>
+      </size>
      </property>
      <property name="title">
       <string>User Defined Key</string>
