--- a/T3kCfgFE/QEditActionKey2WayDialog.ui
+++ b/T3kCfgFE/QEditActionKey2WayDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>414</width>
-    <height>315</height>
+    <height>368</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,6 @@
   <layout class="QVBoxLayout" name="layoutBody">
    <item>
     <layout class="QHBoxLayout" name="layoutProfileItemBox">
-     <property name="spacing">
-      <number>10</number>
-     </property>
      <item>
       <widget class="QLabel" name="lblProfileItem">
        <property name="minimumSize">
@@ -116,11 +113,14 @@
      </item>
      <item>
       <layout class="QVBoxLayout" name="layoutComboBox">
-       <property name="spacing">
-        <number>2</number>
-       </property>
        <item>
         <widget class="QLabel" name="lblKeyDetailZoomOut">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -168,7 +168,7 @@
           <enum>Qt::Vertical</enum>
          </property>
          <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
+          <enum>QSizePolicy::Preferred</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
@@ -196,6 +196,12 @@
        </item>
        <item>
         <widget class="QLabel" name="lblKeyDetailZoomIn">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -301,9 +307,6 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="layoutBtnBox">
-     <property name="spacing">
-      <number>10</number>
-     </property>
      <item>
       <spacer name="spacer3">
        <property name="orientation">
