--- a/T3kCfgFE/QTouchSettingDialog.ui
+++ b/T3kCfgFE/QTouchSettingDialog.ui
@@ -66,15 +66,18 @@
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
        <property name="widgetResizable">
-        <bool>false</bool>
+        <bool>true</bool>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignHCenter|Qt::AlignTop</set>
        </property>
        <widget class="QWidget" name="scrollAreaWidgetContents">
         <property name="geometry">
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>360</width>
-          <height>600</height>
+          <width>380</width>
+          <height>616</height>
          </rect>
         </property>
         <property name="minimumSize">
@@ -93,16 +96,7 @@
          <string notr="true">QWidget#scrollAreaWidgetContents { background: transparent; }</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
-         <property name="leftMargin">
-          <number>0</number>
-         </property>
-         <property name="topMargin">
-          <number>0</number>
-         </property>
-         <property name="rightMargin">
-          <number>0</number>
-         </property>
-         <property name="bottomMargin">
+         <property name="margin">
           <number>0</number>
          </property>
          <item>
@@ -127,7 +121,7 @@
          <item>
           <widget class="QFrame" name="frameTM">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -780,6 +774,12 @@
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>16777215</width>
+               <height>64</height>
+              </size>
              </property>
              <property name="title">
               <string>Auto Select</string>
