--- a/T3kSoftlogic/TabCalibrationWidget.ui
+++ b/T3kSoftlogic/TabCalibrationWidget.ui
@@ -455,6 +455,12 @@
         <height>18</height>
        </size>
       </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>18</height>
+       </size>
+      </property>
       <property name="text">
        <string>Connection</string>
       </property>
@@ -504,6 +510,12 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
+        <height>18</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
         <height>18</height>
        </size>
       </property>
@@ -607,6 +619,12 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
+        <height>18</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
         <height>18</height>
        </size>
       </property>
@@ -727,6 +745,12 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
+        <height>18</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
         <height>18</height>
        </size>
       </property>
