--- a/T3kCfg/T3kCfgWnd.ui
+++ b/T3kCfg/T3kCfgWnd.ui
@@ -14,7 +14,7 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -454,24 +454,12 @@
       <x>10</x>
       <y>370</y>
       <width>601</width>
-      <height>32</height>
+      <height>34</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="LinkLayout">
      <item>
       <widget class="QFlatTextButton" name="BtnMainLink">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>180</width>
-         <height>0</height>
-        </size>
-       </property>
        <property name="cursor">
         <cursorShape>PointingHandCursor</cursorShape>
        </property>
@@ -479,14 +467,14 @@
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
-        <string>@ Habilience</string>
+        <string>(c) Habilience</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="Line" name="line">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
