T3kCfg  - add Advanced menu : auto detection, bent adjustment

--- a/T3kCfg/QMainMenuWidget.ui
+++ b/T3kCfg/QMainMenuWidget.ui
@@ -942,7 +942,7 @@ Buzzer, Shortcut Key</string>
      <x>310</x>
      <y>10</y>
      <width>280</width>
-     <height>18</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -955,7 +955,7 @@ Buzzer, Shortcut Key</string>
      <x>310</x>
      <y>90</y>
      <width>280</width>
-     <height>18</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="mouseTracking">
@@ -1106,6 +1106,7 @@ p, li { white-space: pre-wrap; }
 &lt;table border=&quot;0&quot; style=&quot;-qt-table-type: root; margin-top:4px; margin-bottom:4px; margin-left:4px; margin-right:4px;&quot;&gt;
 &lt;tr&gt;
 &lt;td style=&quot;border: none;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
