--- a/T3kCfg/QCalibrationSettingWidget.ui
+++ b/T3kCfg/QCalibrationSettingWidget.ui
@@ -448,7 +448,7 @@
      <x>10</x>
      <y>10</y>
      <width>600</width>
-     <height>18</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="focusPolicy">
@@ -476,7 +476,7 @@
      <x>10</x>
      <y>120</y>
      <width>600</width>
-     <height>18</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -544,6 +544,37 @@
       </property>
       <property name="text">
        <string>Touch Settings...</string>
+      </property>
+      <property name="icon">
+       <iconset resource="T3kCfgRes.qrc">
+        <normaloff>:/T3kCfgRes/resources/PNG_ICON_SETTING.png</normaloff>:/T3kCfgRes/resources/PNG_ICON_SETTING.png</iconset>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QFlatTextButton" name="BtnAdvanced">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>22</height>
+       </size>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+       </font>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="focusPolicy">
+       <enum>Qt::TabFocus</enum>
+      </property>
+      <property name="text">
+       <string>Advanced...</string>
       </property>
       <property name="icon">
        <iconset resource="T3kCfgRes.qrc">
