--- a/T3kCfgFE/QBentAdjustmentDialog.ui
+++ b/T3kCfgFE/QBentAdjustmentDialog.ui
@@ -77,7 +77,16 @@ QTextEdit:disabled {
           </sizepolicy>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_5" stretch="1,1,1">
-          <property name="margin">
+          <property name="leftMargin">
+           <number>2</number>
+          </property>
+          <property name="topMargin">
+           <number>2</number>
+          </property>
+          <property name="rightMargin">
+           <number>2</number>
+          </property>
+          <property name="bottomMargin">
            <number>2</number>
           </property>
           <item>
@@ -319,7 +328,7 @@ QTextEdit:disabled {
                  </spacer>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="btnMarginLeftDec">
+                 <widget class="QPushButton" name="btnMarginLeftInc">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -342,7 +351,7 @@ QTextEdit:disabled {
                    <enum>Qt::StrongFocus</enum>
                   </property>
                   <property name="text">
-                   <string>-</string>
+                   <string>+</string>
                   </property>
                   <property name="autoRepeat">
                    <bool>true</bool>
@@ -388,13 +397,13 @@ QTextEdit:disabled {
                    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Gulim'; font-size:9pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="btnMarginLeftInc">
+                 <widget class="QPushButton" name="btnMarginLeftDec">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -417,7 +426,7 @@ p, li { white-space: pre-wrap; }
                    <enum>Qt::StrongFocus</enum>
                   </property>
                   <property name="text">
-                   <string>+</string>
+                   <string>-</string>
                   </property>
                   <property name="autoRepeat">
                    <bool>true</bool>
@@ -491,7 +500,7 @@ Inverted Landscape</string>
                  </spacer>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="btnMarginRightDec">
+                 <widget class="QPushButton" name="btnMarginRightInc">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -514,7 +523,7 @@ Inverted Landscape</string>
                    <enum>Qt::StrongFocus</enum>
                   </property>
                   <property name="text">
-                   <string>-</string>
+                   <string>+</string>
                   </property>
                   <property name="autoRepeat">
                    <bool>true</bool>
@@ -560,13 +569,13 @@ Inverted Landscape</string>
                    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lucida Grande'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Gulim'; font-size:10pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:10pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="btnMarginRightInc">
+                 <widget class="QPushButton" name="btnMarginRightDec">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -589,7 +598,7 @@ p, li { white-space: pre-wrap; }
                    <enum>Qt::StrongFocus</enum>
                   </property>
                   <property name="text">
-                   <string>+</string>
+                   <string>-</string>
                   </property>
                   <property name="autoRepeat">
                    <bool>true</bool>
@@ -994,13 +1003,10 @@ p, li { white-space: pre-wrap; }
   <tabstop>btnMaringUpDec</tabstop>
   <tabstop>txtEdtMarginUp</tabstop>
   <tabstop>btnMaringUpInc</tabstop>
-  <tabstop>btnMarginRightDec</tabstop>
   <tabstop>txtEdtMarginRight</tabstop>
-  <tabstop>btnMarginRightInc</tabstop>
   <tabstop>btnMarginDownInc</tabstop>
   <tabstop>txtEdtMarginDown</tabstop>
   <tabstop>btnMarginDownDec</tabstop>
-  <tabstop>btnMarginLeftInc</tabstop>
   <tabstop>txtEdtMarginLeft</tabstop>
   <tabstop>btnReset</tabstop>
   <tabstop>btnSave</tabstop>
