--- a/T3kCfgFE/dialog.ui
+++ b/T3kCfgFE/dialog.ui
@@ -131,6 +131,9 @@
    </item>
    <item>
     <layout class="QVBoxLayout" name="layoutMid">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetMaximumSize</enum>
+     </property>
      <item>
       <widget class="QStyleButton" name="btnSideview">
        <property name="sizePolicy">
@@ -257,6 +260,19 @@
      </item>
      <item>
       <spacer name="spacerBody">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>0</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
