--- a/T3kCfgFE/QSideviewDialog.ui
+++ b/T3kCfgFE/QSideviewDialog.ui
@@ -44,6 +44,9 @@
          <height>50</height>
         </size>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
        <property name="text">
         <string>Cam1</string>
        </property>
@@ -68,6 +71,9 @@
          <width>140</width>
          <height>50</height>
         </size>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
        </property>
        <property name="text">
         <string>Cam2</string>
@@ -94,6 +100,9 @@
          <height>50</height>
         </size>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
        <property name="text">
         <string>Cam1-1</string>
        </property>
@@ -118,6 +127,9 @@
          <width>140</width>
          <height>50</height>
         </size>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
        </property>
        <property name="text">
         <string>Cam2-1</string>
@@ -233,6 +245,9 @@
             <bold>false</bold>
            </font>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
+          </property>
           <property name="text">
            <string>+</string>
           </property>
@@ -253,6 +268,9 @@
            <font>
             <pointsize>10</pointsize>
            </font>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
           </property>
           <property name="tabChangesFocus">
            <bool>true</bool>
@@ -276,6 +294,9 @@
             <weight>50</weight>
             <bold>false</bold>
            </font>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
           </property>
           <property name="text">
            <string>-</string>
@@ -306,6 +327,9 @@
             <height>34</height>
            </rect>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
+          </property>
           <property name="text">
            <string>&lt;</string>
           </property>
@@ -327,6 +351,9 @@
             <pointsize>10</pointsize>
            </font>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
+          </property>
           <property name="tabChangesFocus">
            <bool>true</bool>
           </property>
@@ -342,6 +369,9 @@
             <width>40</width>
             <height>34</height>
            </rect>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
           </property>
           <property name="text">
            <string>&gt;</string>
@@ -364,6 +394,9 @@
             <pointsize>10</pointsize>
            </font>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
+          </property>
           <property name="tabChangesFocus">
            <bool>true</bool>
           </property>
@@ -380,6 +413,9 @@
             <height>34</height>
            </rect>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
+          </property>
           <property name="text">
            <string>&gt;</string>
           </property>
@@ -395,6 +431,9 @@
             <width>40</width>
             <height>34</height>
            </rect>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
           </property>
           <property name="text">
            <string>&lt;</string>
@@ -417,6 +456,9 @@
             <pointsize>10</pointsize>
            </font>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
+          </property>
           <property name="tabChangesFocus">
            <bool>true</bool>
           </property>
@@ -433,6 +475,9 @@
             <height>34</height>
            </rect>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
+          </property>
           <property name="text">
            <string>&gt;</string>
           </property>
@@ -448,6 +493,9 @@
             <width>40</width>
             <height>34</height>
            </rect>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::ClickFocus</enum>
           </property>
           <property name="text">
            <string>&lt;</string>
@@ -546,6 +594,9 @@
          <height>60</height>
         </size>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
        <property name="text">
         <string>Reset</string>
        </property>
@@ -577,6 +628,9 @@
          <width>160</width>
          <height>60</height>
         </size>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
        </property>
        <property name="text">
         <string>[Remote] Share Sideview</string>
@@ -616,6 +670,9 @@
          <height>60</height>
         </size>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
        <property name="text">
         <string>Refresh</string>
        </property>
@@ -635,6 +692,9 @@
          <height>60</height>
         </size>
        </property>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
+       </property>
        <property name="text">
         <string>Save</string>
        </property>
@@ -653,6 +713,9 @@
          <width>100</width>
          <height>60</height>
         </size>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::ClickFocus</enum>
        </property>
        <property name="text">
         <string>Close</string>
