--- a/T3kCfgFE/T3kCfgFE.qrc
+++ b/T3kCfgFE/T3kCfgFE.qrc
@@ -21,5 +21,6 @@
         <file>resources/keyicon_win.png</file>
         <file>resources/License.html</file>
         <file>resources/PNG_QUESTION_MARK.png</file>
+        <file>resources/51-t3ksensors.rules</file>
     </qresource>
 </RCC>
